# minecraft-link

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
protocol/: README.md  gen_constants.py  protocol.json
protocol/golden/: cases.json
pylib/: README.md  pyproject.toml
pylib/src/ocl/: __init__.py  __main__.py  _protocol.py  cli.py
pylib/tests/: test_golden.py
src/main/java/mod/kelvinlby/: OpenCrafterLink.java  OpenCrafterLinkClient.java
src/main/java/mod/kelvinlby/config/: ModMenuIntegration.java  OclConfig.java  OclConfigScreen.java
src/main/java/mod/kelvinlby/link/: AbstractLinkBridge.java  BinaryCodec.java  InboundInstruction.java  InputDriver.java  InventoryAction.java  InventoryMapper.java  InventoryState.java  LinkBridge.java  LinkConfig.java  OutboundSnapshot.java  SlotAddress.java  SlotGroup.java  SlotGroupState.java  SlotInfo.java  TcpBridge.java  TickDriver.java  UdsBridge.java  VisionCapture.java  VisionFrame.java  ZmqBridge.java
src/main/java/mod/kelvinlby/mixin/: ClientPlayerEntityMixin.java  ClientPlayerInteractionManagerMixin.java  RecipeBookScreenMixin.java
src/main/java/mod/kelvinlby/mixin/client/: MinecraftClientInvoker.java
src/main/java/mod/kelvinlby/recorder/: ActionReader.java  ActionSet.java  DatasetWriter.java  FfmpegEncoder.java  InventoryActionTap.java  PackedFrame.java  Recorder.java  Sample.java  Sampler.java  SaveResult.java  SaveToast.java  VisionTap.java
src/main/resources/: fabric.mod.json  open-crafter-link.accesswidener  open-crafter-link.mixins.json
src/test/java/mod/kelvinlby/link/: BinaryCodecGoldenTest.java  GenGolden.java  GoldenVectors.java  TestEncoders.java
tools/: README.md  ocl_link.py  ocl_test_controller.py
